catkin_ws/logs/backend/build.make.412.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:58:13: error: cannot declare variable ‘fdem’ to be of abstract type ‘SLAM::SIFT’
 static SIFT fdem(descriptorRatio, minMatches, sufficientMatches);
             ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:18:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/SIFT.h:20:7: note:   because the following virtual functions are pure within ‘SLAM::SIFT’:
 class SIFT : public IFeatures{
       ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:18:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:15:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/IFeatures.h:65:16: note: 	virtual bool SLAM::IFeatures::match(const std::vector<cv::KeyPoint>&, const cv::Mat&, const std::vector<cv::KeyPoint>&, const cv::Mat&, std::vector<cv::DMatch>&) const
   virtual bool match( const std::vector<cv::KeyPoint>& kpts1, const cv::Mat& descs1,
                ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
